src/rules/snapshots/pg_migration_lint__rules__pgm013__tests__drop_column_with_unique_index_fires.snap
---
source: src/rules/pgm013.rs
assertion_line: 175
expression: findings
---
- rule_id: PGM013
  severity: Minor
  message: "Dropping column 'code' from table 'products' silently removes unique constraint 'idx_products_code_unique'. Verify that the uniqueness guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
