src/rules/snapshots/pg_migration_lint__rules__pgm013__tests__multi_column_unique_drop_one_fires.snap
---
source: src/rules/pgm013.rs
assertion_line: 274
expression: findings
---
- rule_id: PGM013
  severity: Minor
  message: "Dropping column 'a' from table 'subscriptions' silently removes unique constraint 'uq_subscriptions_a_b'. Verify that the uniqueness guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
