src/rules/snapshots/pg_migration_lint__rules__pgm013__tests__set_not_null_on_existing_table_fires.snap
---
source: src/rules/pgm013.rs
expression: findings
---
- rule_id: PGM013
  severity: Critical
  message: "SET NOT NULL on column 'status' of existing table 'orders' requires an ACCESS EXCLUSIVE lock and full table scan. Use a CHECK constraint with NOT VALID, validate it, then set NOT NULL."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
